# PIT-Market-Intelligence-Platform

./: .env.example  .gitignore  PIT Market Intelligence Platform — 演化 PRD v2.0.md  PRD：PIT Market Intelligence Platform.md  PRD：PIT Market Intelligence Platform.md附件是项目prd，TO.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  数据获取与清洗的逻辑和准确性的改进意见.md
config/: availability_rules.yaml  instruments.yaml  metrics.yaml  settings.yaml
config/schemas/: LLMProvenanceRunFacet.json  api_slice.schema.json  evidence.schema.json  llm_analysis.schema.json  observation.schema.json  ui_view_state.schema.json
docker/: Dockerfile.api  Dockerfile.web  README.md
docs/: frontend-improvement-notes.md  local-deployment.md  phase-0-gate.md  phase-1-gate.md  phase-2-gate.md  phase-3-gate.md  phase-4-gate.md  phase-5-gate.md  phase-6-gate.md  phase-7-gate.md  v1.1-acceptance.md
docs/api/: index.html
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/backtest/: page.tsx
frontend/app/dashboard/: DashboardClient.tsx  page.tsx
frontend/app/dashboard/replay/: page.tsx
frontend/app/findings/[findingId]/: page.tsx
frontend/app/health/: page.tsx
frontend/app/lineage/[entityId]/: page.tsx
frontend/app/panels/: page.tsx
frontend/app/panels/[panelId]/: page.tsx
frontend/app/panels/new/: page.tsx
frontend/app/registry/: page.tsx
frontend/app/replay/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/reports/[reportId]/: page.tsx
frontend/app/system/: page.tsx
frontend/components/: AGGridPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  EvidenceDrawer.tsx  FilterRail.tsx  FindingCard.tsx  LineageDrawer.tsx  PITContextBar.tsx  PanelSwitcher.tsx  RevisionTimeline.tsx  RiskHeatmap.tsx  SSEProgressBar.tsx  Sidebar.tsx  SourceHealthMatrix.tsx  TimeSeriesChart.tsx
frontend/lib/: api.ts  formatting.ts  queryKeys.ts  useMounted.ts  useSSEStream.ts  useUrlState.ts
frontend/lib/__tests__/: api-build.test.ts  formatting.test.ts
frontend/scripts/: e2e-screenshots.cjs
frontend/stores/: reportStore.ts  selectionStore.ts  sliceStore.ts
frontend/types/: api.ts
notebooks/: bayesian_xgb_search_v1.ipynb  factor_ic_attribution_v1.ipynb  walk_forward_equity_v1.ipynb
scripts/: build_notebooks.py  ci-local.ps1  ci-local.sh  cron-watchdog-docker.sh  cron-watchdog.sh  dev-start.ps1  dev-start.sh  dev-stop.ps1  dev-stop.sh  install-pre-commit.sh  perf_independent.py  pre-commit-check.sh  setup-env-docker.sh  smoke-test.ps1  smoke-test.sh
src/pit_market/: __init__.py  cli.py
src/pit_market/api/: __init__.py  analyses.py  export.py  extended.py  lineage.py  main.py  panels.py
src/pit_market/auth/: __init__.py  deps.py  permissions.py
src/pit_market/backtest/: __init__.py  engine.py
src/pit_market/dagster/: __init__.py
src/pit_market/data/: trading_calendar.py
src/pit_market/evidence/: __init__.py  catalog.py
src/pit_market/features/: __init__.py  engine.py
src/pit_market/ingestion/: __init__.py
src/pit_market/ingestion/adapters/: __init__.py  (+11 more)
src/pit_market/lineage/: __init__.py
src/pit_market/llm/: __init__.py  adapter.py  runner.py  validator.py
src/pit_market/normalization/: __init__.py  resolver.py  silver.py
src/pit_market/notifications/: __init__.py  feishu.py
src/pit_market/pit/: __init__.py  builder.py  real_builder.py
src/pit_market/reporting/: __init__.py
src/pit_market/storage/: __init__.py  backend.py  cache.py  duckdb_backend.py  duckdb_engine.py  panel_store.py  polars_backend.py  registry.py
tests/backend/: test_adapters_t34.py  test_api_health.py  test_auth_phase5.py  test_backtest_phase5.py  test_build_panel_api.py  test_cftc_adapter.py  test_cli_phase5.py  test_export.py  test_feature_engine.py  test_finra_adapter.py  test_fred_adapter.py  test_lineage_phase4.py  test_llm_provider.py  test_manifest_only_panel.py  test_notebooks_phase5.py  test_notifications_phase5.py  test_p1_adapters.py  test_panels_api.py  test_perf_baseline.py  test_phase3_llm.py  test_pit_builder.py  test_redis_cache_phase5.py  test_registry.py  test_resolver.py  test_silver_schema.py  test_slice_api_phase2.py  test_storage_t37.py  test_trading_calendar.py  test_yfinance_adapter.py
tests/pit_leakage/: test_pit_leakage.py
(+2 files in other folders)
